Fix missing case statement from branch merge

A previous cherry-pick was missing a necessary case statement to trigger
fling behavior.  Fix this on the M56 branch.

NOPRESUBMIT=true
NOTRY=true

BUG=680889
R=lanwei@chromium.org

Review-Url: https://codereview.chromium.org/2650963004
Cr-Original-Commit-Position: refs/branch-heads/2924@{#861}
Cr-Original-Branched-From: 3a87aecc31cd1ffe751dd72c04e5a96a1fc8108a-refs/heads/master@{#433059}
Committed: https://chromium.googlesource.com/chromium/src/+/67a6fb85a5ac46aea25fdba28706432648ecb9dd
Review-Url: https://codereview.chromium.org/2650963004 .
Cr-Commit-Position: refs/branch-heads/2924@{#867}
Cr-Branched-From: 3a87aecc31cd1ffe751dd72c04e5a96a1fc8108a-refs/heads/master@{#433059}